Fix slide name overflowing the slide preview footer. [IQSLDSH-379]

--- a/public/modules/slideshows/css/slideshows-edit.scss
+++ b/public/modules/slideshows/css/slideshows-edit.scss
@@ -153,7 +153,10 @@
 
 .iqss-slideshowedit-preview-footer-title {
     flex: 1;
+    overflow: hidden;
     text-align: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .iqss-slideshowedit-preview-footer-fullScreen-container {
